# HackSentry

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
services/api/: package.json  server.js
services/api/app/: app.js
services/api/controllers/: authCtrl.js  bookmarkCtrl.js  filterCtrl.js  hackathonCtrl.js  searchCtrl.js
services/api/middleware/: authMiddleware.js  globalErrHandler.js
services/api/model/: Bookmark.js  SavedFilter.js  SearchAnalytics.js  UnifiedHackathon.js  User.js
services/api/routes/: authRoutes.js  bookmarkRoutes.js  filterRoutes.js  hackathonRoutes.js  searchRoutes.js
services/api/src/: index.js
services/api/utils/: queryBuilder.js
services/api/workers/: reminderWorker.js  statusUpdater.js
services/dashboard/: package.json
services/dashboard/public/: index.html
services/scrapers/: Dockerfile  pyproject.toml
services/scrapers/src/: worker.py
