[tool.poetry]
name = "hacksentry-scrapers"
version = "0.1.0"
description = "Scrapers & workers for HackSentry"
authors = ["You <you@example.com>"]
[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31"
beautifulsoup4 = "^4.12"
redis = "^4.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^24.0"
